<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lenovo.myapplication2.MainActivity"
    android:orientation="vertical">
    <Button
        android:id="@+id/bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind" />
    <Button
        android:id="@+id/unbind"
        android:text="@string/unbind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/search"
        android:text="@string/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:text="@string/add"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/id"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/name"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:text="@string/register"
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/unregister"
        android:id="@+id/unreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/startactivity"
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/area"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
